CS2270/Exams/Exam_1_practice/compiling_error.txt
C:\Users\ryhof\Desktop\CS2270\Exams\Exam_1_practice\prob1.cpp: In function 'int main()':
C:\Users\ryhof\Desktop\CS2270\Exams\Exam_1_practice\prob1.cpp:34:12: error: cannot convert 'int**' to 'int*'
 myFunction(&a);
            ^~
C:\Users\ryhof\Desktop\CS2270\Exams\Exam_1_practice\prob1.cpp:20:22: note:   initializing argument 1 of 'void myFunction(int*)'
 void myFunction(int *c){
                 ~~~~~^
